# mld_brain_volumetry_dti_analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  requirements.txt
mixed_models_results/: FA_variable_median_level_Region_mixed_models.csv  FA_variable_median_level_Structure_mixed_models.csv  FA_variable_median_level_Whole_Brain_mixed_models.csv  FA_variable_p90_level_Region_mixed_models.csv  FA_variable_p90_level_Structure_mixed_models.csv  FA_variable_p90_level_Whole_Brain_mixed_models.csv  FA_variable_percent_above_thres_level_Region_mixed_models.csv  FA_variable_percent_above_thres_level_Structure_mixed_models.csv  FA_variable_percent_above_thres_level_Whole_Brain_mixed_models.csv  MD_variable_median_level_Region_mixed_models.csv  MD_variable_median_level_Structure_mixed_models.csv  MD_variable_median_level_Whole_Brain_mixed_models.csv  MD_variable_p10_level_Region_mixed_models.csv  MD_variable_p10_level_Structure_mixed_models.csv  MD_variable_p10_level_Whole_Brain_mixed_models.csv  MRIscore_variable_na_level_na_mixed_models.csv  volumetry_variable_tiv_level_Region_mixed_models.csv  volumetry_variable_tiv_level_Structure_mixed_models.csv
prediction_results/: FA_variable_median_level_Region_elastic_net.csv  FA_variable_median_level_Structure_elastic_net.csv  FA_variable_median_level_Whole_Brain_elastic_net.csv  FA_variable_p90_level_Region_elastic_net.csv  FA_variable_p90_level_Structure_elastic_net.csv  FA_variable_p90_level_Whole_Brain_elastic_net.csv  FA_variable_percent_above_thres_level_Region_elastic_net.csv  (+12 more)
scripts/: b_fetch_clinical_data.py  (+15 more)
(+38 files in other folders)
