[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "PL", "D", "UP", "C90", "B", "Q", "S"]
ignore = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# --- Setuptools: discover packages under src/ ---
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
