[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "PL", "D", "UP", "C90", "B", "Q", "S"]
ignore = []

[project]
name = "brain_stats_tools"
version = "0.1.0"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# --- Setuptools: discover packages under src/ ---
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["brain_stats_tools*"]  # finds src/brain_stats_tools and any subpackages
